feat: 完成三项开发计划 - i18n补齐、反馈系统、提示词模板
1. i18n国际化完善：
   - 扫描并补齐所有硬编码中文文案
   - 更新 hd_image_manager.js、auth_modals.js 等文件
   - 完善提示/错误弹窗、按钮、表单验证的翻译

2. 留言与建议功能：
   - 后端：添加 /api/feedback 和 /api/feedback/my API
   - 实现防刷机制（10分钟限制）和XSS防护
   - 前端：创建 feedback-ui.html 和 feedback_manager.js
   - 个人中心新增反馈卡片，支持分类和历史查看

3. 常用提示词模板：
   - 创建 prompt_templates.js 模板管理器
   - 6个类别×4个模板：风景、人像、产品、头像、二次元、Logo
   - 首页新增模板按钮，美观的模态框界面
   - 支持一键应用模板到输入框和负面提示词

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -608,6 +608,14 @@
             <!-- 内容创作区域 -->
             <section class="input-section" id="create" style="margin-top: 20px;">
                 <h2 class="section-title" data-i18n="inputTitle" style="margin-bottom: 12px;">描述文本</h2>
+                
+                <!-- 常用模板按钮 -->
+                <div style="margin-bottom: 12px;">
+                    <button id="template-btn" class="template-btn" data-i18n="promptTemplates">
+                        📝 常用模板
+                    </button>
+                </div>
+                
                 <textarea id="text-input" rows="4" placeholder="请输入描述，如：一只可爱的猫咪在草地上玩耍，阳光明媚，高清摄影" style="margin-bottom: 12px;"></textarea>
                 <!-- 快速填充示例按钮区域（移动到此处） -->
                 <div class="examples-quickfill">
@@ -951,6 +959,7 @@
     <script src="js/api_client.js?v=20250809" defer></script>
     <script src="js/ui_handler.js?v=20250809" defer></script>
     <script src="js/ui_enhancements.js?v=20250809" defer></script>
+    <script src="js/prompt_templates.js?v=20250903" defer></script>
     <script src="js/app.js?v=20250809" defer></script>
     <!-- 认证模态交互脚本（保证表单submit被JS接管，避免浏览器默认提交导致405） -->
     <script src="js/auth_modals.js?v=20250902" defer></script>
